--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,4 @@
 project('CHIP-8', 'cpp')
 sdldep = dependency('sdl2')
-executable('debug', 'main.cpp', 'chip8.cpp', dependencies : sdldep)
-executable('release', 'main.cpp', 'chip8.cpp', dependencies : sdldep)
+executable('debug', 'main.cpp', 'chip8.cpp', cpp_args: '-Og', dependencies : sdldep)
+executable('release', 'main.cpp', 'chip8.cpp', cpp_args: '-O3', dependencies : sdldep, build_by_default: false)
